fix(backtester): add timestamp logging and 1s delay to prevent IBKR pacing violations during mass download